# carbide

./: .gitattributes  .gitignore  .gitmodules  .oxlintrc.json  .prettierignore  .svelte-kit  CHANGELOG.md  NOTICE  README.md  conversation-2026-04-06-155756.md  conversation-2026-04-14-091018.md  fix_settings.py  how  node_modules  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  preview_icon.html  vite.config.ts
.changeset/: 2zy4sz85.md  agent-mode.md  ai-ux-overhaul.md  attachment-links-mcp-tools-rename.md  backlinks-update-toast-marketplace.md  bases-inline-ai-fixes.md  bright-pens-glow.md  browse-mode-iwe-fix.md  bug-batch-fixes.md  bug-report-2026-07-20.md  carbide-minor.md  cold-jokes-admire.md  collapse-resize-plugins-editor-polish.md  deps-upgrade-perf-and-editor-fixes.md  docked-outline-toolbar-actions-and-search-hardening.md  docked-rail-width-toggle-graph-and-file-import.md  draggable-list-items.md  dsl-index-note-names.md  editor-block-ops.md  editor-chrome-keys.md  editor-fixes-large-files-http.md  editor-fold-collapse.md  eleven-sloths-flow.md  embed-wiki-target-resolution.md  epub-reader.md  feature-batch-2026-06-22.md  feature-batch-2026-06-24.md  file-explorer-ux-and-bases-tree.md  (+49 more)
docs/: UI.md  (+16 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.ios.conf.json  tauri.lite.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  pty.json
src-tauri/crates/carbide-cli/: Cargo.toml
src-tauri/crates/carbide-cli/src/: auth.rs  client.rs  format.rs  install.rs  main.rs  mcp.rs  setup.rs
src-tauri/crates/carbide-cli/src/commands/: bases.rs  dev.rs  git.rs  mod.rs  notes.rs  references.rs  search.rs  tasks.rs  vault.rs
src-tauri/icons/: icon.icns
src-tauri/patches/wry-0.54.4/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  MOBILE.md
src-tauri/patches/wry-0.54.4/examples/streaming/: index.html
src-tauri/patches/wry-0.54.4/src/wkwebview/: drag_drop.rs  mod.rs  synthetic_mouse_events.rs
src-tauri/patches/wry-0.54.4/src/wkwebview/class/: url_scheme_handler.rs  wry_web_view_parent.rs  wry_web_view_ui_delegate.rs
src-tauri/patches/wry-0.55.1/: .cargo_vcs_info.json  CHANGELOG.md
src-tauri/patches/wry-0.55.1/examples/custom_protocol/: index.html  subpage.html
src-tauri/patches/wry-0.55.1/src/wkwebview/class/: url_scheme_handler.rs
src-tauri/resources/: iwe-default-config.toml  markdown-oxide-default-config.toml  marksman-default-config.toml
src-tauri/scripts/: frontend-build.sh  frontend-dev.sh
src-tauri/src/: main.rs
src-tauri/src/app/: menu.rs  mod.rs  tray.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/ai/: agent_handoff.rs  agent_stream.rs  mod.rs  native_agent.rs  secrets.rs  service.rs  stream.rs
src-tauri/src/features/ai/harness/: claude_adapter.rs  codex_adapter.rs  mod.rs
src-tauri/src/features/bases/: service.rs
src-tauri/src/features/canvas/: mod.rs
src-tauri/src/features/clip/: capture.rs  service.rs
src-tauri/src/features/code_lsp/: language_config.rs  manager.rs  mod.rs
src-tauri/src/features/export/: mod.rs
src-tauri/src/features/external_mcp/: client.rs  manager.rs  mod.rs  types.rs
src-tauri/src/features/git/: service.rs
src-tauri/src/features/graph/: service.rs  types.rs
src-tauri/src/features/iwe/: service.rs
src-tauri/src/features/lint/: cli.rs  lsp.rs  mod.rs  service.rs
src-tauri/src/features/markdown_lsp/: mod.rs  provider.rs  service.rs  types.rs
src-tauri/src/features/marksman/: service.rs  types.rs
src-tauri/src/features/mcp/: auth.rs  cli_routes.rs  http.rs  mod.rs  rag_bridge.rs  router.rs  server.rs  setup.rs  shared_ops.rs  transport.rs  types.rs
src-tauri/src/features/mcp/tools/: git.rs  graph.rs  metadata.rs  mod.rs  notes.rs  rag.rs  references.rs  search.rs  tasks.rs  vault.rs
src-tauri/src/features/notes/: service.rs
src-tauri/src/features/pipeline/: service.rs
src-tauri/src/features/plugin/: http_fetch.rs  marketplace.rs  mod.rs  service.rs  settings.rs  types.rs  watcher.rs
src-tauri/src/features/plugin/sdk/: carbide_plugin_api.js
src-tauri/src/features/reading_position/: mod.rs
src-tauri/src/features/reference/: linked_source.rs  mod.rs  scan_cache.rs  service.rs
src-tauri/src/features/search/: db.rs  embeddings.rs  epub_extractor.rs  frontmatter.rs  hnsw_index.rs  html_extractor.rs  hybrid.rs  link_parser.rs  markdown_doc.rs  mod.rs  model.rs  service.rs  text_extractor.rs  vector_db.rs
src-tauri/src/features/settings/: service.rs
src-tauri/src/features/smart_links/: config.rs  mod.rs  rules.rs
src-tauri/src/features/stt/: audio.rs  mod.rs  models.rs  text.rs  transcription.rs  types.rs  vad.rs
src-tauri/src/features/tags/: service.rs
src-tauri/src/features/task_lists/: mod.rs
src-tauri/src/features/tasks/: mod.rs  service.rs  types.rs
src-tauri/src/features/toolchain/: downloader.rs  registry.rs  resolver.rs  service.rs  types.rs
src-tauri/src/features/trusted_html/: mod.rs
src-tauri/src/features/vault/: service.rs
src-tauri/src/features/vault_settings/: service.rs
src-tauri/src/features/watcher/: service.rs
src-tauri/src/shared/: asset_cache.rs  buffer.rs  cache.rs  constants.rs  io_utils.rs  link_parser.rs  live_html.rs  markdown_doc.rs  mod.rs  storage.rs  vault_ignore.rs  vault_path.rs
src-tauri/src/shared/lsp_client/: forwarding.rs  mod.rs  provider.rs  restartable.rs  transport.rs  types.rs  uri_utils.rs
src-tauri/src/tests/: mod.rs
src-tauri/tests/: agent_handoff.rs  agent_stream.rs  codex_adapter.rs  external_mcp_state.rs  iwes_registry.rs  link_rewrite.rs  lsp_client_error_display.rs  markdown_lsp_provider_types.rs  markdown_lsp_status_serde.rs  mcp_mutating_parity.rs  mcp_router.rs  mcp_schema_consistency.rs  mcp_tools_git.rs  mcp_tools_graph_references.rs  mcp_tools_notes.rs  mcp_tools_search_metadata_vault.rs  mcp_types.rs  metadata_events.rs  native_agent.rs  notes_service_safety.rs  plugin_protocol.rs  search_db_behavior.rs  search_embed_gating.rs  settings_read_bool.rs  smart_links_config.rs  smart_links_rules.rs  toolchain_registry_specs.rs  vault_settings_service_parse.rs
(+2578 files in other folders)
