[package]
name = "carbide"
version = "1.11.0"
description = "Local-first markdown vault"
authors = ["altamkhan"]
edition = "2021"
autotests = false

[lib]
name = "carbide_lib"
path = "src/lib.rs"

[[bin]]
name = "carbide"
path = "src/main.rs"

[features]
default = ["full"]
lite = []
full = [
    "lite",
    "feat-ai",
    "feat-semantic-search",
    "feat-plugins",
    "feat-references",
    "feat-canvas",
    "feat-tasks",
    "feat-bases",
    "feat-toolchain",
]
feat-ai = []
feat-semantic-search = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:hf-hub",
    "dep:tokenizers",
]
feat-plugins = ["dep:serde_yml"]
feat-references = ["dep:pdf-extract", "dep:lopdf", "dep:zip"]
feat-canvas = []
feat-tasks = []
feat-bases = []
feat-toolchain = ["dep:flate2", "dep:tar"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.95"
blake3 = "1.5.5"
comrak = "0.50.0"
mime_guess = "2.0.5"
notify = "7.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
rusqlite = { version = "0.32", features = ["bundled"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tokio = { version = "1.43.0", features = ["fs", "macros", "process", "rt-multi-thread", "sync", "time"] }
openssl = { version = "0.10", features = ["vendored"] }
git2 = "0.19"
walkdir = "2.5.0"
tauri-plugin-pty = "0.2.1"
glob = "0.3.3"
tempfile = "3"
chardetng = "0.1.17"
encoding_rs = "0.8.35"
ropey = "1.6.1"
tauri-plugin-single-instance = "2.4.0"
regex = "1.12.3"
lazy_static = "1.5.0"
fuzzy-matcher = "0.3"
specta = { version = "=2.0.0-rc.22", features = ["serde_json"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
lsp-types = "0.97"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
sha2 = "0.10"
url = "2.5.8"
rayon = "1.10"

# Optional deps gated by features
candle-core = { version = "0.9", default-features = false, optional = true }
candle-nn = { version = "0.9", default-features = false, optional = true }
candle-transformers = { version = "0.9", default-features = false, optional = true }
hf-hub = { version = "0.5", features = ["tokio"], optional = true }
tokenizers = { version = "0.22", default-features = false, features = ["onig"], optional = true }
serde_yml = { version = "0.0.12", optional = true }
pdf-extract = { version = "0.10.0", optional = true }
lopdf = { version = "0.34", optional = true }
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }

[dev-dependencies]
filetime = "0.2"

[patch.crates-io]
wry = { path = "patches/wry-0.54.4" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
