[workspace]
members = [".", "crates/carbide-cli"]

[package]
name = "carbide"
version = "1.17.0"
description = "Local-first markdown vault"
authors = ["altamkhan"]
edition = "2021"
autotests = false

[lib]
name = "carbide_lib"
path = "src/lib.rs"

[[bin]]
name = "carbide"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.95"
blake3 = "1.5.5"
comrak = "0.50.0"
mime_guess = "2.0.5"
notify = "7.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
rusqlite = { version = "0.32", features = ["bundled"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tokio = { version = "1.43.0", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
openssl = { version = "0.10", features = ["vendored"] }
git2 = "0.20"
walkdir = "2.5.0"
tauri-plugin-pty = "0.2.1"
glob = "0.3.3"
tempfile = "3"
chardetng = "0.1.17"
encoding_rs = "0.8.35"
ropey = "1.6.1"
tauri-plugin-single-instance = "2.4.0"
regex = "1.12.3"
lazy_static = "1.5.0"
candle-core = { version = "0.9", default-features = false }
candle-nn = { version = "0.9", default-features = false }
candle-transformers = { version = "0.9", default-features = false }
hf-hub = { version = "0.5", features = ["tokio"] }
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
fuzzy-matcher = "0.3"
specta = { version = "=2.0.0-rc.22" }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
lsp-types = "0.97"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"], default-features = false }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
url = "2.5.8"
pdf-extract = "0.10.0"
lopdf = "0.34"
rayon = "1.10"
axum = "0.8"
futures-util = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
subtle = "2"
rand = "0.8"
hex = "0.4"
hnsw_rs = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9", default-features = false, features = ["accelerate"] }
candle-nn = { version = "0.9", default-features = false, features = ["accelerate"] }
candle-transformers = { version = "0.9", default-features = false, features = ["accelerate"] }

[dev-dependencies]
filetime = "0.2"

[patch.crates-io]
wry = { path = "patches/wry-0.54.4" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
