[workspace]
members = [".", "crates/carbide-cli"]

[package]
name = "carbide"
version = "1.32.0"
description = "Local-first markdown vault"
authors = ["altamkhan"]
edition = "2021"
autotests = false

[[test]]
name = "external_mcp_state"
path = "tests/external_mcp_state.rs"

[[test]]
name = "iwes_registry"
path = "tests/iwes_registry.rs"

[[test]]
name = "lsp_client_error_display"
path = "tests/lsp_client_error_display.rs"

[[test]]
name = "markdown_lsp_provider_types"
path = "tests/markdown_lsp_provider_types.rs"

[[test]]
name = "markdown_lsp_status_serde"
path = "tests/markdown_lsp_status_serde.rs"

[[test]]
name = "mcp_router"
path = "tests/mcp_router.rs"

[[test]]
name = "mcp_tools_git"
path = "tests/mcp_tools_git.rs"

[[test]]
name = "mcp_tools_graph_references"
path = "tests/mcp_tools_graph_references.rs"

[[test]]
name = "mcp_tools_notes"
path = "tests/mcp_tools_notes.rs"

[[test]]
name = "mcp_tools_search_metadata_vault"
path = "tests/mcp_tools_search_metadata_vault.rs"

[[test]]
name = "mcp_types"
path = "tests/mcp_types.rs"

[[test]]
name = "metadata_events"
path = "tests/metadata_events.rs"

[[test]]
name = "notes_service_safety"
path = "tests/notes_service_safety.rs"

[[test]]
name = "plugin_protocol"
path = "tests/plugin_protocol.rs"

[[test]]
name = "search_db_behavior"
path = "tests/search_db_behavior.rs"

[[test]]
name = "smart_links_config"
path = "tests/smart_links_config.rs"

[[test]]
name = "smart_links_rules"
path = "tests/smart_links_rules.rs"

[[test]]
name = "toolchain_registry_specs"
path = "tests/toolchain_registry_specs.rs"

[[test]]
name = "vault_path_risk"
path = "tests/vault_path_risk.rs"

[[test]]
name = "vault_settings_service_parse"
path = "tests/vault_settings_service_parse.rs"

[lib]
name = "carbide_lib"
path = "src/lib.rs"

[[bin]]
name = "carbide"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1"
blake3 = "1.5.5"
comrak = "0.50.0"
mime_guess = "2.0.5"
notify = "7.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
rusqlite = { version = "0.32", features = ["bundled"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tokio = { version = "1.43.0", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
openssl = { version = "0.10", features = ["vendored"] }
git2 = "0.20"
walkdir = "2.5.0"
tauri-plugin-pty = "0.2.1"
glob = "0.3.3"
tempfile = "3"
chardetng = "0.1.17"
encoding_rs = "0.8.35"
ropey = "1.6.1"
tauri-plugin-single-instance = "2.4.0"
regex = "1.12.3"
lazy_static = "1.5.0"
candle-core = { version = "0.9", default-features = false }
candle-nn = { version = "0.9", default-features = false }
candle-transformers = { version = "0.9", default-features = false }
hf-hub = { version = "0.5", features = ["tokio"] }
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
fuzzy-matcher = "0.3"
specta = { version = "=2.0.0-rc.22" }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
lsp-types = "0.97"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"], default-features = false }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
url = "2.5.8"
pdf-extract = "0.10.0"
lopdf = "0.34"
rayon = "1.10"
axum = "0.8"
futures-util = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
subtle = "2"
rand = "0.8"
hex = "0.4"
hnsw_rs = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9", default-features = false, features = ["accelerate", "metal"] }
candle-nn = { version = "0.9", default-features = false, features = ["accelerate", "metal"] }
candle-transformers = { version = "0.9", default-features = false, features = ["accelerate", "metal"] }

[dev-dependencies]
filetime = "0.2"

[patch.crates-io]
wry = { path = "patches/wry-0.54.4" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
