[package]
name = "carbide-cli"
version = "1.29.0"
edition = "2021"
description = "CLI client for Carbide note-taking app"

[[bin]]
name = "carbide-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std"] }
dirs = "6"
termimad = "0.34"

[dev-dependencies]
tempfile = "3"
